<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_class">AddClass</string>
    <string name="add_class">Add a Class</string>
    <string name="add_assignment">Add an Assignment</string>
    <string name="sync_ILearn">Sync with ILearn</string>
    <string name="new_class">New Class</string>
    <string name="class_name">Class Name:</string>
    <string name="class_color">Color:</string>
    <string name="edit_name">Enter the Class Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add">+</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_add_assignment">AddAssignment</string>
    <string name="title_declare">Enter a title...</string>
    <string name="date_title">\nSelect the date the assignment is due...</string>
    <string name="time_title">\nSelect the time the assignment is due...</string>
    <string name="description">Enter a description...</string>
    <string name="add_assign">Add this Assignment</string>
    <string name="addClass">Add this Class</string>
    <string name="title_activity_help">HelpActivity</string>
</resources>
