<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="cs246.ilearntracker.Settings">
    <item android:id="@+id/action_addAssign" android:title="@string/add_assignment"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_addClass" android:title="@string/add_class"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/action_goToILearn" android:title="@string/sync_ILearn"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
