<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="cs246.ilearntracker.AddAssignment">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_declare"
            android:id="@+id/titleEdit"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/description"
            android:layout_below="@+id/titleEdit"
            android:id="@+id/commentsEdit"/>

        <Spinner
            android:id="@+id/classSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/commentsEdit"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_title"
            android:id="@+id/dateTitle"
            android:layout_below="@+id/classSelect"/>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:layout_below="@+id/dateTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_title"
            android:id="@+id/timeTitle"
            android:layout_below="@+id/datePicker"/>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_below="@+id/timeTitle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/add_assign"
            android:onClick="add"
            android:id="@+id/addAssignment"
            android:layout_below="@+id/timePicker"/>

    </RelativeLayout>

</ScrollView>